--- a/data/dm_depress.Rmd
+++ b/data/dm_depress.Rmd
@@ -2,7 +2,7 @@
 title: "Cleaning depression data"
 author: "Robin Donatello"
 date: "February 1, 2016"
-output: pdf_document
+output: html_document
 ---
 
 # Purpose
