--- a/notes/solutions/Ch6_solutions.Rmd
+++ b/notes/solutions/Ch6_solutions.Rmd
@@ -8,6 +8,7 @@ output:
   pdf_document: default
 ---
 
+
 ```{r, warning=FALSE, message=FALSE}
 library(knitr); library(rmarkdown);library(ggplot2);library(xtable)
 options(xtable.comment = FALSE) # suppresses the % line from xtable
@@ -111,7 +112,7 @@ the rest of the assumptions appear to be very well upheld. Thus my
 conclusion is that no records need to be removed from this analysis. 
 
 
-**4. Repeat 1 -3 for mothers.   **
+**4. Repeat 1 -3 for mothers.**
 Examine the relationship between weight and height for mothers. 
 
 ```{r}
@@ -172,5 +173,9 @@ data for mothers are more spread out than for fathers. Correlation is a direct
 function of the variance of both the predictor and outcomes, and so the density
 of the points around the best fit line dictates the strength of the correlation. 
 
+----
 
-   
+Last updated
+```{r}
+Sys.info()
+```
