--- a/HW_Info.Rmd
+++ b/HW_Info.Rmd
@@ -21,7 +21,8 @@ rubric <- read_csv("admin/hw_rubric.csv")
 This is where I will post homework solutions (full and partial), and some helper code.
 
 * Data Wrangling Solutions [Ch3_solutions](notes/solutions/ch3_solutions.html)
-* Simple Linear regression [Ch6_solutions](notes/solutions/SLR_solutions.html)
+* Simple Linear regression [SLR_solutions](notes/solutions/SLR_solutions.html)
+* Multiple Linear regression [MLR_solutions](notes/solutions/MLR_solutions.html)
 * Plotting help for spline predictions [Lec04_solutions](notes/solutions/Lec04_solutions.html)
 
 
